--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,9 +8,15 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "paths": {
+      "@models": ["./src/models/index.ts"],
+      "@services": ["./src/services/index.ts"],
+      "@processors": ["./src/processors/index.ts"]
+    }
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist"
   ]
 }
