--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,11 @@
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+        "project": [
+          "./src/tsconfig.json",
+          "./tests/tsconfig.json"
+        ]
     },
     "rules": {
       "semicolon": [
@@ -27,6 +31,8 @@
         {
           "ignoreRestSiblings": true
         }
-      ]
+      ],
+      "@typescript-eslint/no-useless-constructor": "off",
+      "@typescript-eslint/no-empty-function": ["error", { "allow": ["constructors"] }]
     }
 }
