--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -70,4 +70,4 @@ jobs:
         - name: Publish GHR
           run: npm publish
           env:
-            NODE_AUTH_TOKEN: ${{secrets.GPR_TOKEN}}
+            NODE_AUTH_TOKEN: ${{secrets.GRP_TOKEN}}
