--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,24 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./src" },
-    { "path": "./tests" }
+  "compilerOptions": {
+    "baseUrl": ".",
+    "outDir": "dist",
+    "moduleResolution": "Node",
+    "target": "ES2022",
+    "module": "CommonJS",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "paths": {
+      "@models": ["./src/models/index.ts"],
+      "@services": ["./src/services/index.ts"],
+      "@processors": ["./src/processors/index.ts"]
+    }
+  },
+  "exclude": [
+    "node_modules",
+    "dist"
   ]
 }
