--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-scrappy",
   "version": "0.1.0",
   "description": "Yet another web scraper.",
-  "main": "dist/src/main.js",
+  "main": "dist/index.js",
   "files": [
     "dist"
   ],
@@ -13,7 +13,7 @@
     "start": "scrappy",
     "dev": "tsx src/cli.ts",
     "prebuild": "node ./node_modules/del-cli/cli.js dist/",
-    "build": "tsc --build && tsc-alias -p tsconfig.json",
+    "build": "tsc --project tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "test": "tsx tests",
     "test:watch": "tsx --watch tests",
     "test:coverage": "c8 npm run test"
@@ -37,8 +37,8 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "puppeteer": "^20.5.0",
     "json-stream-stringify": "^3.1.0",
+    "puppeteer": "^20.5.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-adblocker": "^2.13.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
